# ZLayer

./: .dockerignore  .gitignore  ACTION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DEPLOYING_IMAGES.md  FINAL_TODO.md  FIX_TODOS.md  GPU_ROADMAP.md  HANDOFF.md  HANDOFF_WINDOWS_HYPERV.md  LICENSE  MAC_MPS_RUNTIME.md  MAC_TODO.md  Makefile  RAFT_TODO.md  RAFT_TODODELME.md  README.md  RUNTIME_GUIDE.md  TESTING.md  TODO_FIXES_DELME.md  TODO_PGP.md  TODO_WINDOWSDELME.md  V1_SPEC.md  V1_TODO.md  WORKFLOWS.md  ZLAYER_BUILDER.md  ZLAYER_SDK_FIXES.md  ZLAYER_SECRETS_MANAGER.md  ZLAYER_TODO.md  ZPipeline.yaml  action.yml  install.ps1  install.py  install.sh  openapi.json  zsecrets.zlayer.yml
crates/agent/: Cargo.toml
crates/agent/src/: autoscale_controller.rs  bundle.rs  cgroups_stats.rs  container_supervisor.rs  containerd_runtime.rs  cron_scheduler.rs  dependency.rs  env.rs  error.rs  health.rs  init.rs  job.rs  lib.rs  metrics_providers.rs  overlay_manager.rs  proxy_manager.rs  runtime.rs  service.rs  storage_manager.rs  youki_runtime.rs
crates/agent/tests/: containerd_e2e.rs  youki_e2e.rs
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  lib.rs  openapi.rs  ratelimit.rs  router.rs  server.rs
crates/api/tests/: integration.rs
crates/builder/: Cargo.toml
crates/builder/src/: builder.rs  lib.rs
crates/init_actions/: Cargo.toml
crates/init_actions/src/: actions.rs  error.rs
crates/layer-storage/: Cargo.toml
crates/layer-storage/src/: config.rs  error.rs  lib.rs  snapshot.rs  types.rs
crates/observability/: Cargo.toml
crates/observability/src/: config.rs  error.rs  lib.rs  logging.rs  metrics.rs  propagation.rs  tracing_otel.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: allocator.rs  bootstrap.rs  dns.rs  error.rs  health.rs  lib.rs  wireguard.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: acme.rs  config.rs  error.rs  lb.rs  lib.rs  proxy.rs  routes.rs  routing.rs  server.rs  service.rs  tls.rs  tunnel.rs
crates/registry/: Cargo.toml
crates/registry/src/: cache.rs  client.rs  error.rs  lib.rs  persistent_cache.rs  s3_cache.rs  unpack.rs
crates/scheduler/: Cargo.toml
crates/scheduler/examples/: persistent_storage.rs
crates/scheduler/src/: autoscaler.rs  error.rs  lib.rs  metrics.rs  persistent_raft_storage.rs  placement.rs  raft.rs  raft_network.rs  raft_service.rs  raft_storage.rs
crates/scheduler/tests/: integration.rs
crates/secrets-client-api/: Cargo.toml
crates/secrets-client-api/src/: lib.rs
crates/spec/: Cargo.toml
crates/spec/src/: error.rs  lib.rs  types.rs  validate.rs
crates/zlayer-agent/: Cargo.toml  README.md
crates/zlayer-agent/src/: auth.rs  autoscale_controller.rs  bundle.rs  capability.rs  cdi.rs  cgroups_stats.rs  container_supervisor.rs  cron_scheduler.rs  dependency.rs  env.rs  error.rs  gpu_detector.rs  gpu_metrics.rs  gpu_sharing.rs  health.rs  init.rs  job.rs  lib.rs  metrics_providers.rs  netlink.rs  network_state.rs  overlay_manager.rs  proxy_manager.rs  runtime.rs  service.rs  stabilization.rs  storage_manager.rs  worker_client.rs
crates/zlayer-agent/tests/: composite_dispatch_e2e.rs  docker_runtime_test.rs  gpu_spec_shape.rs  infrastructure_wiring.rs  macos_mps_smoke.rs  macos_sandbox_e2e.rs  multi_node_service_subnets.rs  overlay_setup_race.rs  wasip2_integration_test.rs  wasm_e2e_test.rs  wasm_runtime_test.rs  windows_cluster_join_e2e.rs  windows_hcs_e2e.rs  windows_hcs_hyperv_e2e.rs  windows_overlay_e2e.rs  youki_e2e.rs
crates/zlayer-api/: Cargo.toml  README.md
crates/zlayer-api/src/: auth.rs  config.rs  error.rs  event_bus.rs  identity.rs  lib.rs  openapi.rs  poller.rs  ratelimit.rs  router.rs  server.rs
crates/zlayer-api/tests/: deployments_test.rs  integration.rs  oidc_integration.rs  permissions_resource_kind_secret.rs
crates/zlayer-builder/: Cargo.toml  README.md  build.rs
crates/zlayer-builder/src/: bottle_lockfile.rs  builder.rs  error.rs  lib.rs  macos_compat.rs  macos_image_resolver.rs  macos_toolchain.rs  sandbox_builder.rs  wasm_builder.rs  windows_builder.rs  windows_image_resolver.rs  windows_toolchain.rs
crates/zlayer-builder/tests/: buildah_sidecar_e2e.rs  dockerfile_compat_e2e.rs  hcs_backend_e2e.rs  sandbox_build_e2e.rs  wasm_oci_e2e.rs  windows_build_e2e.rs  windows_templates.rs
crates/zlayer-client/: Cargo.toml  README.md
crates/zlayer-client/src/: daemon_client.rs  lib.rs  session.rs
crates/zlayer-cluster-rpc/: Cargo.toml  build.rs
crates/zlayer-cluster-rpc/proto/: cluster.proto
crates/zlayer-cluster-rpc/src/: convert.rs  lib.rs
crates/zlayer-consensus/: Cargo.toml  README.md
crates/zlayer-consensus/src/: config.rs  error.rs  lib.rs  node.rs  types.rs
crates/zlayer-core/: Cargo.toml  README.md
crates/zlayer-core/src/: config.rs  error.rs  lib.rs
crates/zlayer-docker/: Cargo.toml  README.md
crates/zlayer-docker/src/: lib.rs  shim.rs
crates/zlayer-docker/tests/: compose_roundtrip.rs  komodo_e2e.rs
crates/zlayer-gcs/: Cargo.toml
crates/zlayer-gcs/src/: bridge.rs  diagnostics.rs  error.rs  frame.rs  lib.rs  log_forward.rs  protocol.rs  transport.rs
crates/zlayer-git/: Cargo.toml  README.md
crates/zlayer-git/src/: lib.rs  sync.rs
crates/zlayer-hcs/: Cargo.toml  README.md
crates/zlayer-hcs/src/: enumerate.rs  error.rs  events.rs  handle.rs  lib.rs  operation.rs  process.rs  schema.rs  stats.rs  system.rs
crates/zlayer-hcs/tests/: integration.rs
crates/zlayer-hns/: Cargo.toml  README.md
crates/zlayer-hns/src/: adapter.rs  attach.rs  endpoint.rs  error.rs  handle.rs  lib.rs  namespace.rs  network.rs  schema.rs
crates/zlayer-init-actions/: Cargo.toml  README.md
crates/zlayer-init-actions/src/: actions.rs  lib.rs
crates/zlayer-manager/: Cargo.toml  Leptos.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.css
crates/zlayer-manager/src/: api_client.rs  cli.rs  csrf_client.rs  instances.rs  lib.rs  main.rs  server.rs
crates/zlayer-overlay/: Cargo.toml  README.md
crates/zlayer-overlay/src/: allocator.rs  (+13 more)
crates/zlayer-overlayd/: Cargo.toml
crates/zlayer-paths/: Cargo.toml  README.md
(+1917 files in other folders)
