[workspace]
resolver = "2"
default-members = ["bin/zlayer"]
members = [
  "crates/zlayer-spec",
  "crates/zlayer-paths",
  "crates/zlayer-core",
  "crates/zlayer-agent",
  "crates/zlayer-proxy",
  "crates/zlayer-overlay",
  "crates/zlayer-scheduler",
  "crates/zlayer-init-actions",
  "crates/zlayer-registry",
  "crates/zlayer-observability",
  "crates/zlayer-api",
  "crates/zlayer-builder",
  "crates/zlayer-tui",
  "crates/zlayer-storage",
  "crates/zlayer-py",
  "crates/zlayer-secrets",
  "crates/zlayer-tunnel",
  "bin/zlayer",
  "crates/zlayer-consensus",
  "crates/zlayer-docker",
  "crates/zlayer-wsl",
  "crates/zlayer-git",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zachhandley/ZLayer"
homepage = "https://zlayer.dev"
rust-version = "1.85"  # Minimum supported version

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1.49", features = ["full", "tracing"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Cron expression parsing
cron = "0.15"

# HTTP/client
reqwest = { version = "0.13", features = ["json"] }
hyper = { version = "1.8", features = ["full", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Tower middleware
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# Web framework (for API)
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", default-features = false, features = ["cookie"] }

# JWT Authentication
jsonwebtoken = "9"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Rate limiting
governor = "0.10"
tower_governor = "0.8"

# Consensus
openraft = { version = "0.9", features = ["serde"] }

# Metrics
prometheus = "0.13"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# OCI
oci-spec = "0.8"
# Use rustls instead of native-tls to avoid OpenSSL cross-compilation issues
oci-client = { version = "0.15", default-features = false, features = ["rustls-tls-native-roots"] }

# Async traits
async-trait = "0.1"

# Secrets
secrecy = { version = "0.10", features = ["serde"] }

# Cryptography
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
blake2 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2"

# DNS
hickory-server = "0.24"
hickory-client = "0.24"

# Serialization (binary)
postcard2 = { version = "0.2.1", features = ["alloc"] }

# Storage
zql = { version = "0.4", registry = "forgejo", default-features = false, features = ["sql-compat", "native-storage"] }

# Config
config = "0.15"
toml = "0.8"

# UUID
uuid = { version = "1.19", features = ["v4", "serde"] }

# Streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# Archive handling
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
zip = "2"

# Unix/Linux system calls
libc = "0.2"
nix = { version = "0.31", features = ["fs", "signal", "process", "user", "sched", "mount"] }
sd-notify = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Base64 encoding/decoding
base64 = "0.22"

# Validation
validator = { version = "0.19", features = ["derive"] }

# ACME/TLS certificates
instant-acme = "0.7"
rcgen = "0.13"
x509-parser = "0.18"

# Concurrent hashmaps
dashmap = "6"

# Synchronization primitives
parking_lot = "0.12"

# Bytes
bytes = "1"

# System info
num_cpus = "1.16"

# Random number generation
rand = "0.9"

# Socket utilities
socket2 = "0.5"

# =============================================================================
# Internal Workspace Crates (aliased with -zql suffix for publishing)
# =============================================================================
# The dependency KEY stays as `zlayer-X` so all code (`use zlayer_X::...`) and
# feature forwarding (`zlayer-X/feature`) works without changes.
# The `package` field tells Cargo the actual crate name on the registry.

# --- Publishable crates ---
zlayer-spec = { path = "crates/zlayer-spec", version = "0.0.0-dev", package = "zlayer-spec-zql", registry = "forgejo" }
zlayer-observability = { path = "crates/zlayer-observability", version = "0.0.0-dev", package = "zlayer-observability-zql", registry = "forgejo" }
zlayer-overlay = { path = "crates/zlayer-overlay", version = "0.0.0-dev", package = "zlayer-overlay-zql", registry = "forgejo" }
zlayer-storage = { path = "crates/zlayer-storage", version = "0.0.0-dev", package = "zlayer-storage-zql", registry = "forgejo" }
zlayer-core = { path = "crates/zlayer-core", version = "0.0.0-dev", package = "zlayer-core-zql", registry = "forgejo" }
zlayer-builder = { path = "crates/zlayer-builder", version = "0.0.0-dev", package = "zlayer-builder-zql", registry = "forgejo" }
zlayer-init-actions = { path = "crates/zlayer-init-actions", version = "0.0.0-dev", package = "zlayer-init-actions-zql", registry = "forgejo" }
zlayer-registry = { path = "crates/zlayer-registry", version = "0.0.0-dev", package = "zlayer-registry-zql", registry = "forgejo" }
zlayer-scheduler = { path = "crates/zlayer-scheduler", version = "0.0.0-dev", package = "zlayer-scheduler-zql", registry = "forgejo" }
zlayer-tunnel = { path = "crates/zlayer-tunnel", version = "0.0.0-dev", package = "zlayer-tunnel-zql", registry = "forgejo" }

# --- Non-publishable workspace crates ---
zlayer-agent = { path = "crates/zlayer-agent", version = "0.0.0-dev", package = "zlayer-agent-zql", registry = "forgejo" }
zlayer-proxy = { path = "crates/zlayer-proxy", version = "0.0.0-dev", package = "zlayer-proxy-zql", registry = "forgejo" }
zlayer-api = { path = "crates/zlayer-api", version = "0.0.0-dev", package = "zlayer-api-zql", registry = "forgejo" }
zlayer-tui = { path = "crates/zlayer-tui", version = "0.0.0-dev", package = "zlayer-tui-zql", registry = "forgejo" }
zlayer-py = { path = "crates/zlayer-py", version = "0.0.0-dev", package = "zlayer-py-zql", registry = "forgejo" }
zlayer-secrets = { path = "crates/zlayer-secrets", version = "0.0.0-dev", package = "zlayer-secrets-zql", registry = "forgejo" }
zlayer-consensus = { path = "crates/zlayer-consensus", version = "0.0.0-dev", package = "zlayer-consensus-zql", registry = "forgejo" }
zlayer-docker = { path = "crates/zlayer-docker", version = "0.0.0-dev", package = "zlayer-docker-zql", registry = "forgejo" }
zlayer-wsl = { path = "crates/zlayer-wsl", version = "0.0.0-dev", package = "zlayer-wsl-zql", registry = "forgejo" }
zlayer-paths = { path = "crates/zlayer-paths", version = "0.0.0-dev", package = "zlayer-paths-zql", registry = "forgejo" }
zlayer-git = { path = "crates/zlayer-git", version = "0.0.0-dev", package = "zlayer-git-zql", registry = "forgejo" }

# Git (gitoxide) — pure-Rust git implementation used by `zlayer-git`.
# Features: blocking HTTPS (reqwest + rustls, no OpenSSL), credential helpers,
# worktree mutation for clone/checkout, revision parsing for rev_parse_single.
gix = { version = "0.81", default-features = false, features = [
  "blocking-network-client",
  "blocking-http-transport-reqwest-rust-tls",
  "credentials",
  "worktree-mutation",
  "revision",
  "sha1",
] }

# Lettre — async SMTP client used by notifier handlers.
# rustls-only (no OpenSSL system libs); builder + hostname for Message-ID.
lettre = { version = "0.11", default-features = false, features = [
  "smtp-transport", "tokio1-rustls-tls", "builder", "hostname",
] }

# =============================================================================
# Build Profiles
# =============================================================================

[profile.release]
# Enable Link-Time Optimization for smaller, faster binaries
lto = "thin"
# Single codegen unit for better optimization (slower compile)
codegen-units = 1
# Strip symbols for smaller binaries
strip = true
# Optimize for size with speed (good balance)
opt-level = 3
# Enable debug info for profiling (optional, remove for smallest size)
# debug = 1
# Abort on panic for smaller binary (no unwinding)
panic = "abort"

[profile.release-fast]
# Faster release builds for development
inherits = "release"
lto = "thin"
codegen-units = 16
strip = false

[profile.dev]
# Faster incremental builds
opt-level = 0
debug = true

[profile.dev.package."*"]
# Optimize dependencies even in dev mode
opt-level = 2

[profile.bench]
# Benchmarking profile
inherits = "release"
debug = true
lto = "thin"

# =============================================================================
# Workspace Lints
# =============================================================================

[workspace.lints.rust]
unsafe_code = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

# =============================================================================
# Release Metadata
# =============================================================================

[workspace.metadata.release]
# Release configuration for cargo-release
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "v{{version}}"
tag-prefix = "v"
