[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
containerd-client.workspace = true
init_actions = { version = "0.1.0", path = "../init_actions" }
libc.workspace = true
nix.workspace = true
oci-spec.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
serde_yaml.workspace = true
spec = { version = "0.1.0", path = "../spec" }
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
zlayer-core = { version = "0.1.0", path = "../zlayer-core" }
proxy = { version = "0.1.0", path = "../proxy" }

[dev-dependencies]
rand = "0.8"
