[package]
name = "builder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dockerfile parsing and buildah command generation for ZLayer"

[dependencies]
# Dockerfile parsing
dockerfile-parser = "0.9"

# Core
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "process"] }
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Hashing
sha2.workspace = true
hex.workspace = true

# Platform detection
dirs = "5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
