[package]
name = "init_actions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
