[package]
name = "init_actions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aws-config = { version = "1.8.11", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1.96.0", optional = true }
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
