[package]
name = "layer-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# AWS SDK
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Compression and archiving
zstd = "0.13"
tar.workspace = true

# Checksums
sha2.workspace = true
hex.workspace = true
crc32c = "0.6"

# State persistence
redb.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full", "fs"] }
async-trait.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
