[package]
name = "observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
axum = ["dep:axum"]
propagation = []

[dependencies]
# Web framework (optional for metrics handler)
axum = { workspace = true, optional = true }
# Core
thiserror.workspace = true
tokio.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

# Metrics
prometheus.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Config
config.workspace = true

# HTTP types for propagation
http = "1"
