[package]
name = "overlay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake2.workspace = true
serde.workspace = true
spec = { version = "0.1.0", path = "../spec" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
trust-dns-client.workspace = true
trust-dns-server.workspace = true
x25519-dalek.workspace = true
zlayer-core = { version = "0.1.0", path = "../zlayer-core" }
