[package]
name = "proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Pingora (Cloudflare's proxy framework) - New implementation
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-load-balancing = { workspace = true }
pingora-cache = { workspace = true }
pingora-timeout = { workspace = true }
pingora-http = "0.6"

# Legacy hyper-based implementation (for backward compatibility)
hyper = { workspace = true }
hyper-util = { workspace = true }
http = "1"
http-body-util = "0.1"
bytes = "1"

# TLS/ACME
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
instant-acme = { workspace = true }
rcgen = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Utils
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Tower middleware (for legacy implementation)
tower = { workspace = true }

# Serialization
serde = { workspace = true }

# Internal crates
spec = { path = "../spec" }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
