[package]
name = "registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
flate2 = "1.1.8"
hex.workspace = true
oci-distribution.workspace = true
redb.workspace = true
sha2.workspace = true
tar = "0.4.44"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.24.0"
