[package]
name = "zlayer-agent-zql"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Container runtime agent using libcontainer/youki"
keywords = ["container", "runtime", "youki", "libcontainer", "orchestration"]
categories = ["os", "virtualization"]
readme = "README.md"

[features]
default = []
docker = ["dep:bollard"]
wasm = [
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:wasmtime-wasi-http",
    "dep:bytes",
    "dep:http",
    "dep:http-body-util",
    "dep:hyper",
    "dep:anyhow",
]
s3 = ["zlayer-init-actions/s3", "zlayer-registry/s3", "dep:zlayer-storage"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
cron.workspace = true
parking_lot.workspace = true
zlayer-init-actions.workspace = true
libc.workspace = true
nix.workspace = true
oci-spec.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
zlayer-secrets.workspace = true
zlayer-spec.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zlayer-core.workspace = true
zlayer-proxy.workspace = true
zlayer-registry = { workspace = true, features = ["persistent"] }
zlayer-overlay.workspace = true
ipnetwork = "0.21.1"
num_cpus.workspace = true
zlayer-scheduler.workspace = true
zlayer-storage = { workspace = true, optional = true }
ulid = "1.2.1"

# Streaming utilities (needed for Docker streaming)
futures-util.workspace = true

# Docker runtime support (optional)
# Features:
# - ssl: TLS support for secure connections
# - time: Timestamp support
# - pipe: Unix socket/Windows named pipe support (required for connect_with_local_defaults)
# - http: HTTP transport support
bollard = { version = "0.20", default-features = false, features = ["ssl", "time", "pipe", "http"], optional = true }

# WebAssembly runtime support (optional)
# Features:
# - async: Tokio integration for async execution
# - cranelift: JIT compilation backend
# - component-model: WASIp2 component model support
wasmtime = { version = "41", default-features = false, features = ["async", "cranelift", "component-model"], optional = true }
wasmtime-wasi = { version = "41", optional = true }
wasmtime-wasi-http = { version = "41", optional = true }

# HTTP types for WASM HTTP handler support (enabled with wasm feature)
bytes = { version = "1", optional = true }
http = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", optional = true }
anyhow = { version = "1", optional = true }

# Linux-specific dependencies for native container runtime (youki/libcontainer)
[target.'cfg(target_os = "linux")'.dependencies]
libcontainer = "0.5"

# macOS-specific dependencies for sandbox and VM runtimes
[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"

[dev-dependencies]
rand = { workspace = true }
tempfile = "3.24.0"
wat = "1.244.0"

[lints]
workspace = true
